# moronic

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  main.cpp  moronic.cpp  moronic.hpp
